--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es2016",
     "lib": ["dom", "dom.iterable", "esnext"],
+    "sourceMap": true, 
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -13,7 +14,12 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "preserve",
-    "incremental": true
+    "incremental": true,
+    "removeComments": true,
+    "noEmitOnError": true,
+    "noUnusedLocals": true,                           
+    "noUnusedParameters": true, 
+    "noImplicitReturns": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
