--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@types/node": "18.11.13",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "chart.js": "^4.0.1",
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
+    "plotly.js": "^2.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-plotly.js": "^2.6.0",
     "typescript": "4.9.4"
   }
 }
