--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
     "react-dom": "18.2.0",
     "react-plotly.js": "^2.6.0",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@types/react-plotly.js": "^2.5.2"
   }
 }
