--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-plotly.js": "^2.6.0",
+    "sass": "^1.56.2",
     "typescript": "4.9.4"
   },
   "devDependencies": {
